HttpCache - Writers and Readers should be mutually exclusive.

There is a combination of simultaneous transactions for an entry, namely
a READ transaction followed by a READ-WRITE transaction that was
violating the mutual exclusiveness of Readers and Writers. This violation
was happening even less frequently because the second transaction being
READ-WRITE can only happen for a range request. This CL fixes the
issue.
HttpCache.RangeGET_DoNotCreateWritersWhenReaderExists

TEST: net_unittests --gtest_filter=
Bug: 792818
Change-Id: I3a98fb8de2cd521210077e4baf9460fe91232eec
Reviewed-on: https://chromium-review.googlesource.com/825802
Reviewed-by: Randy Smith <rdsmith@chromium.org>
Commit-Queue: Shivani Sharma <shivanisha@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524229}
Former-commit-id: 7ed8d6ebc333c49e3abd5e185a3377a87877b98c